Cabal-version:  2.4
Name:           conjure-cp
Version:        2.5.1
Synopsis:       Conjure: The Automated Constraint Modelling Tool
Description:    .
Homepage:       http://github.com/conjure-cp/conjure
License:        BSD-3-Clause
License-file:   LICENSE
Author:         Özgür Akgün
Maintainer:     ozgurakgun@gmail.com
Category:       Constraint Programming
Build-type:     Simple
Library
    default-language : Haskell2010
    hs-source-dirs   : src
    exposed-modules  : Paths_conjure_cp

                     , Conjure.Prelude
                     , Conjure.RepositoryVersion
                     , Conjure.Bug
                     , Conjure.UserError

                     , Conjure.Util.Permutation

                     -- definitions of language constructs
                     , Conjure.Language
                     , Conjure.Language.AbstractLiteral
                     , Conjure.Language.AdHoc
                     , Conjure.Language.Constant
                     , Conjure.Language.Definition
                     , Conjure.Language.Domain
                     , Conjure.Language.Domain.AddAttributes
                     , Conjure.Language.EvaluateOp
                     , Conjure.Language.Expression
                     , Conjure.Language.Lenses
                     , Conjure.Language.Name
                     , Conjure.Language.NameGen
                     , Conjure.Language.TH
                     , Conjure.Language.Type

                     , Conjure.Language.Lexemes
                     , Conjure.Language.Attributes
                     , Conjure.Language.Validator
                     , Conjure.Language.AST.ASTParser
                     , Conjure.Language.AST.Helpers
                     , Conjure.Language.AST.Reformer
                     , Conjure.Language.AST.Syntax

                     , Conjure.Language.Expression.Internal.Generated
                     , Conjure.Language.Expression.DomainSizeOf
                     , Conjure.Language.Expression.OpTypes

                     , Conjure.Language.Expression.Op
                     , Conjure.Language.Expression.Op.Internal.Common
                     , Conjure.Language.Expression.Op.Internal.Generated

                     , Conjure.Language.Expression.Op.Active
                     , Conjure.Language.Expression.Op.AllDiff
                     , Conjure.Language.Expression.Op.AllDiffExcept
                     , Conjure.Language.Expression.Op.And
                     , Conjure.Language.Expression.Op.Apart
                     , Conjure.Language.Expression.Op.AtLeast
                     , Conjure.Language.Expression.Op.AtMost
                     , Conjure.Language.Expression.Op.Compose
                     , Conjure.Language.Expression.Op.AttributeAsConstraint
                     , Conjure.Language.Expression.Op.CatchUndef
                     , Conjure.Language.Expression.Op.QuickPermutationOrder
                     , Conjure.Language.Expression.Op.Defined
                     , Conjure.Language.Expression.Op.Div
                     , Conjure.Language.Expression.Op.DontCare
                     , Conjure.Language.Expression.Op.DotLeq
                     , Conjure.Language.Expression.Op.DotLt
                     , Conjure.Language.Expression.Op.Eq
                     , Conjure.Language.Expression.Op.Factorial
                     , Conjure.Language.Expression.Op.Flatten
                     , Conjure.Language.Expression.Op.Freq
                     , Conjure.Language.Expression.Op.GCC
                     , Conjure.Language.Expression.Op.Geq
                     , Conjure.Language.Expression.Op.Gt
                     , Conjure.Language.Expression.Op.Hist
                     , Conjure.Language.Expression.Op.Iff
                     , Conjure.Language.Expression.Op.Image
                     , Conjure.Language.Expression.Op.ImageSet
                     , Conjure.Language.Expression.Op.Imply
                     , Conjure.Language.Expression.Op.In
                     , Conjure.Language.Expression.Op.Indexing
                     , Conjure.Language.Expression.Op.Intersect
                     , Conjure.Language.Expression.Op.Inverse
                     , Conjure.Language.Expression.Op.Leq
                     , Conjure.Language.Expression.Op.LexLeq
                     , Conjure.Language.Expression.Op.LexLt
                     , Conjure.Language.Expression.Op.Lt
                     , Conjure.Language.Expression.Op.MakeTable
                     , Conjure.Language.Expression.Op.Max
                     , Conjure.Language.Expression.Op.Min
                     , Conjure.Language.Expression.Op.Minus
                     , Conjure.Language.Expression.Op.Mod
                     , Conjure.Language.Expression.Op.Negate
                     , Conjure.Language.Expression.Op.Neq
                     , Conjure.Language.Expression.Op.Not
                     , Conjure.Language.Expression.Op.Or
                     , Conjure.Language.Expression.Op.Participants
                     , Conjure.Language.Expression.Op.Parts
                     , Conjure.Language.Expression.Op.Party
                     , Conjure.Language.Expression.Op.Pow
                     , Conjure.Language.Expression.Op.PowerSet
                     , Conjure.Language.Expression.Op.Pred
                     , Conjure.Language.Expression.Op.PreImage
                     , Conjure.Language.Expression.Op.Product
                     , Conjure.Language.Expression.Op.Range
                     , Conjure.Language.Expression.Op.RelationProj
                     , Conjure.Language.Expression.Op.Restrict
                     , Conjure.Language.Expression.Op.Slicing
                     , Conjure.Language.Expression.Op.Subsequence
                     , Conjure.Language.Expression.Op.Subset
                     , Conjure.Language.Expression.Op.SubsetEq
                     , Conjure.Language.Expression.Op.Substring
                     , Conjure.Language.Expression.Op.Succ
                     , Conjure.Language.Expression.Op.Sum
                     , Conjure.Language.Expression.Op.Supset
                     , Conjure.Language.Expression.Op.SupsetEq
                     , Conjure.Language.Expression.Op.Table
                     , Conjure.Language.Expression.Op.TildeLeq
                     , Conjure.Language.Expression.Op.TildeLt
                     , Conjure.Language.Expression.Op.Together
                     , Conjure.Language.Expression.Op.ToInt
                     , Conjure.Language.Expression.Op.ToMSet
                     , Conjure.Language.Expression.Op.ToRelation
                     , Conjure.Language.Expression.Op.ToSet
                     , Conjure.Language.Expression.Op.Transform
                     , Conjure.Language.Expression.Op.True
                     , Conjure.Language.Expression.Op.TwoBars
                     , Conjure.Language.Expression.Op.Union
                     , Conjure.Language.Expression.Op.Xor

                     -- and some operations on the language constructs
                     , Conjure.Language.CategoryOf
                     , Conjure.Language.TypeOf
                     , Conjure.Compute.DomainOf
                     , Conjure.Compute.DomainUnion
                     , Conjure.Language.DomainSizeOf
                     , Conjure.Language.RepresentationOf
                     , Conjure.Language.Arbitrary
                     , Conjure.Language.Instantiate
                     , Conjure.Language.ModelDiff
                     , Conjure.Language.ModelStats
                     , Conjure.Language.Lexer
                     , Conjure.Language.NameResolution
                     , Conjure.Language.Parser
                     , Conjure.Language.ParserC
                     , Conjure.Language.Pretty
                     , Conjure.Language.ZeroVal


                     , Conjure.Process.AttributeAsConstraints
                     , Conjure.Process.DealWithCuts
                     , Conjure.Process.Enumerate
                     , Conjure.Process.Enums
                     , Conjure.Process.FiniteGivens
                     , Conjure.Process.InferAttributes
                     , Conjure.Process.LettingsForComplexInDoms
                     , Conjure.Process.Boost
                     , Conjure.Process.Sanity
                     , Conjure.Process.Streamlining
                     , Conjure.Process.Unnameds
                     , Conjure.Process.ValidateConstantForDomain

                     -- definitions of representations: how to go down and up
                     , Conjure.Representations
                     , Conjure.Representations.Internal
                     , Conjure.Representations.Common
                     , Conjure.Representations.Combined
                     , Conjure.Representations.Primitive
                     , Conjure.Representations.Tuple
                     , Conjure.Representations.Matrix
                     , Conjure.Representations.Record
                     , Conjure.Representations.Variant
                     , Conjure.Representations.Set.Occurrence
                     , Conjure.Representations.Set.Explicit
                     , Conjure.Representations.Set.ExplicitVarSizeWithDummy
                     , Conjure.Representations.Set.ExplicitVarSizeWithMarker
                     , Conjure.Representations.Set.ExplicitVarSizeWithFlags
                     , Conjure.Representations.MSet.Occurrence
                     , Conjure.Representations.MSet.ExplicitWithFlags
                     , Conjure.Representations.MSet.ExplicitWithRepetition
                     , Conjure.Representations.Function.Function1D
                     , Conjure.Representations.Function.Function1DPartial
                     , Conjure.Representations.Function.FunctionND
                     , Conjure.Representations.Function.FunctionNDPartial
                     , Conjure.Representations.Function.FunctionNDPartialDummy
                     , Conjure.Representations.Function.FunctionAsRelation
                     , Conjure.Representations.Sequence.ExplicitBounded
                     , Conjure.Representations.Permutation.PermutationAsFunction
                     , Conjure.Representations.Relation.RelationAsMatrix
                     , Conjure.Representations.Relation.RelationAsSet
                     , Conjure.Representations.Partition.Occurrence
                     , Conjure.Representations.Partition.PartitionAsSet

                     -- definitions of rules
                     , Conjure.Rules.Definition
                     , Conjure.Rules.Import

                     , Conjure.Rules.Vertical.Tuple
                     , Conjure.Rules.Vertical.Record
                     , Conjure.Rules.Vertical.Variant
                     , Conjure.Rules.Vertical.Matrix

                     , Conjure.Rules.Horizontal.Set
                     , Conjure.Rules.Vertical.Set.Occurrence
                     , Conjure.Rules.Vertical.Set.Explicit
                     , Conjure.Rules.Vertical.Set.ExplicitVarSizeWithDummy
                     , Conjure.Rules.Vertical.Set.ExplicitVarSizeWithMarker
                     , Conjure.Rules.Vertical.Set.ExplicitVarSizeWithFlags

                     , Conjure.Rules.Horizontal.MSet
                     , Conjure.Rules.Vertical.MSet.Occurrence
                     , Conjure.Rules.Vertical.MSet.ExplicitWithFlags
                     , Conjure.Rules.Vertical.MSet.ExplicitWithRepetition

                     , Conjure.Rules.Horizontal.Function
                     , Conjure.Rules.Vertical.Function.Function1D
                     , Conjure.Rules.Vertical.Function.Function1DPartial
                     , Conjure.Rules.Vertical.Function.FunctionND
                     , Conjure.Rules.Vertical.Function.FunctionNDPartial
                     , Conjure.Rules.Vertical.Function.FunctionNDPartialDummy
                     , Conjure.Rules.Vertical.Function.FunctionAsRelation

                     , Conjure.Rules.Horizontal.Sequence
                     , Conjure.Rules.Vertical.Sequence.ExplicitBounded

                     , Conjure.Rules.Horizontal.Relation
                     , Conjure.Rules.Vertical.Relation.RelationAsMatrix
                     , Conjure.Rules.Vertical.Relation.RelationAsSet

                     , Conjure.Rules.Horizontal.Partition
                     , Conjure.Rules.Vertical.Partition.PartitionAsSet
                     , Conjure.Rules.Vertical.Partition.Occurrence

                     , Conjure.Rules.Transform

                     , Conjure.Rules.Horizontal.Permutation
                     , Conjure.Rules.Vertical.Permutation
 
                     , Conjure.Rules.BubbleUp
                     , Conjure.Rules.DontCare
                     , Conjure.Rules.TildeOrdering

                     -- supporting modules for the user interfacing parts
                     , Conjure.UI
                     , Conjure.UI.IO
                     , Conjure.UI.MainHelper
                     , Conjure.UI.Model
                     , Conjure.UI.TranslateParameter
                     , Conjure.UI.TranslateSolution
                     , Conjure.UI.ValidateSolution
                     , Conjure.UI.TypeCheck
                     , Conjure.UI.Split
                     , Conjure.UI.VarSymBreaking
                     , Conjure.UI.ParameterGenerator
                     , Conjure.UI.NormaliseQuantified
                     , Conjure.UI.ErrorDisplay
                     , Conjure.UI.SolveStats

                     , Conjure.LSP.LanguageServer
                     , Conjure.LSP.Documentation
                     , Conjure.LSP.Handlers.File
                     , Conjure.LSP.Handlers.Initialize
                     , Conjure.LSP.Handlers.Hover
                     , Conjure.LSP.Handlers.DocumentSymbol
                     , Conjure.LSP.Handlers.SemanticTokens
                     , Conjure.LSP.Handlers.Format
                     , Conjure.LSP.Handlers.Suggestions
                     , Conjure.LSP.Util

    build-depends    : base >= 4.12.0
                     -- the export list have changed
                     , aeson >= 1.2.2.0
                     , aeson-typescript
                     , bytestring
                     , cereal >= 0.5.1.0
                     -- changes in newline handling
                     , cmdargs >= 0.10.14
                     -- a bunch of improvements in 0.5.8.1
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , hashable
                     , integer-gmp
                     -- >= 4.1.1 because of sepEndBy bugfixes
                     -- < 5 because megaparsec-5 is backwards incompatible
                     , megaparsec ^>= 9.3.0
                     , mtl
                     , parallel-io
                     , pipes
                     , pretty >=1.1.3.6
                     , prettyprinter
                     -- >= 2.9 because of the TH fix: https://github.com/nick8325/quickcheck/issues/101
                     , QuickCheck >= 2.14
                     , random
                     , safe
                     , scientific >=0.3.7
                     -- 1.6.7, because of the stderr handling fix
                     , shelly >= 1.6.7
                     , split
                     , stm
                     , strict
                     , syb
                     , system-filepath
                     , temporary
                     , text
                     , time
                     -- has a performance-related fix
                     , transformers >= 0.5.3.0
                     , uniplate
                     , unordered-containers
                     , vector
                     -- we do not directly depend on clock, but we need at least 0.7.2
                     -- see https://github.com/corsis/clock/issues/35
                     , clock >= 0.7.2
                     -- we do not directly depend on generic-deriving, but we need at least 1.10.6
                     -- see https://github.com/dreixel/generic-deriving/issues/41
                     , generic-deriving >= 1.10.6
                     , ansi-terminal >= 0.8.2
                     , timeit >= 2.0
                     , primes >= 0.2.1.0
                     , parser-combinators
                     , lsp
                     , lens
                     , template-haskell
                     , http-client
                     , http-client-tls
                     , hostname

    default-extensions:
        FlexibleContexts
        FlexibleInstances
        ImplicitParams
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        TypeOperators
        ViewPatterns
        ImportQualifiedPost
    ghc-options:
        -O1
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
    ghc-prof-options:
        -fprof-auto-top
        -fprof-auto-exported


Executable conjure
    default-language : Haskell2010
    hs-source-dirs   : src/exec
    main-is          : Main.hs
    build-depends    : conjure-cp
                     , base
                     , cmdargs
                     , terminal-size >= 0.3.2.1
    default-extensions:
        FlexibleContexts
        FlexibleInstances
        ImplicitParams
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        TypeOperators
        ViewPatterns
        ImportQualifiedPost
    ghc-options:
        -O1
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -threaded
        -rtsopts
        -with-rtsopts=-N1
        -with-rtsopts=-K200M
        -with-rtsopts=-M4G
    ghc-prof-options:
        -fprof-auto-top
        -fprof-auto-exported


Test-Suite conjure-testing
    type             : exitcode-stdio-1.0
    default-language : Haskell2010
    hs-source-dirs   : src/test
    other-modules    : Conjure.Language.DomainSizeTest
                     , Conjure.RepresentationsTest
                     , Conjure.ModelAllSolveAll
                     , Conjure.TypeCheckAll
                     , Conjure.ParsePrint
                     , Conjure.ParserFuzz
                     , Conjure.Custom
    main-is          : TestsMain.hs
    build-depends    : conjure-cp
                     , base
                     , bytestring
                     , cmdargs
                     , containers
                     , Diff
                     , shelly
                     , aeson 
                     , aeson-diff
                     , system-filepath
                     -- see https://github.com/feuerbach/tasty/issues/220
                     -- see https://github.com/feuerbach/tasty/issues/221
                     , tasty >= 1.1.0.1
                     , tasty-ant-xml
                     , tasty-hunit
                     , text
    default-extensions:
        FlexibleContexts
        FlexibleInstances
        ImplicitParams
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoImplicitPrelude
        OverloadedStrings
        ScopedTypeVariables
        TypeOperators
        ViewPatterns
        ImportQualifiedPost
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-incomplete-uni-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -threaded
        -rtsopts
        -with-rtsopts=-N1
        -with-rtsopts=-K200M
        -with-rtsopts=-M4G
    ghc-prof-options:
        -fprof-auto-top
        -fprof-auto-exported
