
Name:           conjure
Version:        1.0
Synopsis:       Extensible Automated Constraint Modelling
Description:    .
Homepage:       http://www.cs.st-andrews.ac.uk/~ozgur
License:        AllRightsReserved
Author:         Ozgur Akgun
Maintainer:     ozgur.akgun@st-andrews.ac.uk
Category:       Constraint Programming
Build-type:     Simple
Extra-source-files:
    datafiles/reservedNames.txt,
    datafiles/reservedOpNames.txt,
    datafiles/conjure.figlet,
    src/Language/EssenceDerivations.hs
Cabal-version:  >= 1.10

Library
    default-language : Haskell2010
    hs-source-dirs   : src
    exposed-modules  : Constants
                     , DeepSeqUtils
                     , Has
                     , MonadInterleave
                     , MonadList
                     , ParsecUtils
                     , PrintUtils
                     , TestUtils
                     , UniqueSupply
                     , Utils
                     , ZippyUtils

                     , Language.Essence
                     , Language.EssenceEvaluator
                     , Language.EssenceKinds
                     , Language.EssenceParsers
                     , Language.EssencePrinters
                     , Language.EssenceTypes

                     , Phases.AuxRename
                     , Phases.BubbleUp
                     , Phases.Eval
                     , Phases.InlineQuanGuards
                     , Phases.QuanRename
                     , Phases.Refn
                     , Phases.RemoveUnusedDecls
                     , Phases.Repr
                     , Phases.ReprRefnCommon
                     , Phases.ResolveTwoBars
                     , Phases.TopLevelAnds
                     , Phases.TupleExplode

                     , Test.Language.OnFile.Common
                     , Test.Language.OnFile.RuleRepr
                     , Test.Language.OnFile.Spec
                     , Test.Language.Unit.Common
                     , Test.Language.Unit.FromFile
                     , Test.Language.Unit.Random
                     , Test.Utils
    build-depends    : base
                     , binary                   == 0.5.1.0
                     , bytestring               == 0.9.2.1
                     , containers               == 0.4.2.1
                     , data-default             == 0.3.0
                     , deepseq                  == 1.3.0.0
                     , directory                == 1.1.0.2
                     , file-embed               == 0.0.4.1
                     , global-variables         == 1.0.1.0
                     , HUnit                    == 1.2.4.2
                     , mtl                      == 2.0.1.0
                     , parsec                   == 3.1.2
                     , pretty                   == 1.1.1.0
                     , pretty-show              == 1.2
                     , QuickCheck               == 2.4.2
                     , random                   == 1.0.1.1
                     , split                    == 0.1.4.2
                     , syb                      == 0.3.6
                     , transformers             == 0.2.2.0
                     , uniplate                 == 1.6.5
                     , value-supply             == 0.6
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -O2
        -rtsopts
        -fno-spec-constr-count
        -funfolding-use-threshold=256
        -with-rtsopts=-H


Executable conjure-tests
    default-language : Haskell2010
    hs-source-dirs   : src-exec
    main-is          : TestMain.hs
    build-depends    : base, conjure
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -O2
        -rtsopts
        -fno-spec-constr-count
        -funfolding-use-threshold=256
        -with-rtsopts=-H


Executable iconjure
    default-language : Haskell2010
    hs-source-dirs   : src-exec
    main-is          : Interactive.hs
    build-depends    : base, conjure
                     , haskeline    == 0.6.4.6
                     , mtl          == 2.0.1.0
                     , transformers == 0.2.2.0
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -O2
        -rtsopts
        -fno-spec-constr-count
        -funfolding-use-threshold=256
        -with-rtsopts=-H


Executable conjure-repr
    default-language : Haskell2010
    hs-source-dirs   : src-exec
    main-is          : ReprMain.hs
    build-depends    : base, conjure
                     , directory    == 1.1.0.2
                     , filepath     == 1.3.0.0
                     , mtl          == 2.0.1.0
                     , transformers == 0.2.2.0
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -O2
        -rtsopts
        -fno-spec-constr-count
        -funfolding-use-threshold=256
        -with-rtsopts=-H


Executable conjure-refn
    default-language : Haskell2010
    hs-source-dirs   : src-exec
    main-is          : RefnMain.hs
    build-depends    : base, conjure
                     , directory    == 1.1.0.2
                     , filepath     == 1.3.0.0
                     , mtl          == 2.0.1.0
                     , transformers == 0.2.2.0
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -O2
        -rtsopts
        -fno-spec-constr-count
        -funfolding-use-threshold=256
        -with-rtsopts=-H


Executable essence-diff
    default-language : Haskell2010
    hs-source-dirs   : src-exec
    main-is          : EssenceDiff.hs
    build-depends    : base, conjure
                     , directory == 1.1.0.2
    ghc-options:
        -fwarn-incomplete-patterns
        -fwarn-missing-signatures
        -fwarn-name-shadowing
        -fwarn-orphans
        -fwarn-overlapping-patterns
        -fwarn-tabs
        -fwarn-unused-do-bind
        -fwarn-unused-matches
        -Wall
        -O2
        -rtsopts
        -fno-spec-constr-count
        -funfolding-use-threshold=256
        -with-rtsopts=-H

